--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ibxm.jar=lib/ibxm.jar
+file.reference.jdom-2.0.6.jar=..\\Projet commun\\lib\\jdom-2.0.6.jar
 file.reference.jinput.jar=lib/jinput.jar
 file.reference.jnlp.jar=lib/jnlp.jar
 file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.natives-windows.jar}:\
     ${file.reference.slick-examples.jar}:\
     ${file.reference.slick.jar}:\
-    ${file.reference.tinylinepp.jar}
+    ${file.reference.tinylinepp.jar}:\
+    ${file.reference.jdom-2.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
