--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ibxm.jar=lib/ibxm.jar
-file.reference.jdom-2.0.6.jar=..\\Projet commun\\lib\\jdom-2.0.6.jar
+file.reference.jdom-2.0.6.jar=lib/jdom-2.0.6/jdom-2.0.6.jar
 file.reference.jinput.jar=lib/jinput.jar
 file.reference.jnlp.jar=lib/jnlp.jar
 file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
