--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,6 @@
-user.properties.file=C:\\Users\\Ma\u00eblle\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Aleckes9\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
