--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,21 +35,21 @@ file.reference.jinput.jar=lib/jinput.jar
 file.reference.jnlp.jar=lib/jnlp.jar
 file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
 file.reference.jorbis-0.0.15.jar=lib/jorbis-0.0.15.jar
-file.reference.lib-natives=lib/natives
 file.reference.lwjgl.jar=lib/lwjgl.jar
 file.reference.lwjgl_util.jar=lib/lwjgl_util.jar
 file.reference.lwjgl_util_applet.jar=lib/lwjgl_util_applet.jar
 file.reference.natives-linux.jar=lib/natives-linux.jar
 file.reference.natives-mac.jar=lib/natives-mac.jar
 file.reference.natives-windows.jar=lib/natives-windows.jar
+file.reference.Pack200Task.jar=lib/natives/Pack200Task.jar
 file.reference.slick-examples.jar=lib/slick-examples.jar
 file.reference.slick.jar=lib/slick.jar
+file.reference.StyleButton.jar=lib/StyleButton.jar
 file.reference.tinylinepp.jar=lib/tinylinepp.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.ibxm.jar}:\
-    ${file.reference.lib-natives}:\
     ${file.reference.jinput.jar}:\
     ${file.reference.jnlp.jar}:\
     ${file.reference.jogg-0.0.7.jar}:\
@@ -63,7 +63,9 @@ javac.classpath=\
     ${file.reference.slick-examples.jar}:\
     ${file.reference.slick.jar}:\
     ${file.reference.tinylinepp.jar}:\
-    ${file.reference.jdom-2.0.6.jar}
+    ${file.reference.Pack200Task.jar}:\
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${file.reference.StyleButton.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
