--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -89,7 +89,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pacmiage2.PacMiage2
+main.class=pacmiage2.JeuPacMiage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
