--- a/build.xml
+++ b/build.xml
@@ -10,64 +10,124 @@
 <project name="PacMiage2" default="default" basedir=".">
     <description>Builds, tests, and runs the project PacMiage2.</description>
     <import file="nbproject/build-impl.xml"/>
-    <!--
+    
+    
+    
+    <target name="clean">
+        <delete dir="build"/>
+    </target>
+    
+    
+    
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+    
+    <target name="-pre-init">
+   <property name="project.name" value="My Library" />
+   <property name="version.num" value="1.4.1" />
+   <tstamp>
+      <format property="NOW" pattern="yyyy-MM-dd HH:mm:ss z" />
+   </tstamp>
+   
+   
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
-
-    (Targets beginning with '-' are not intended to be called on their own.)
-
-    Example of inserting an obfuscator after compilation could look like this:
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
+   <!--
+   <exec outputproperty="svna.version" executable="svnversion">
+       <arg value="-c" />
+       <redirector>
+           <outputfilterchain>
+               <tokenfilter>
+                   <replaceregex pattern="^[0-9]*:?" replace="" flags="g"/>
+                   <replaceregex pattern="M" replace="" flags="g"/>
+               </tokenfilter>
+           </outputfilterchain>
+       </redirector>
+   </exec>
+   -->
 
 
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
+   <manifest file="MANIFEST.MF">
+      <attribute name="Bundle-Name" value="${project.name}" />           
+      <!--<attribute name="Bundle-Revision" value="${svna.version}" />-->
+      <attribute name="Implementation-Title" value="${project.name}" />
+      <!--<attribute name="Class-Path" value="./lib/StyleButton.jar; ./lib/ibxm.jar; ./lib/jdom-2.0.6/jdom-2.0.6-contrib.jar; ./lib/jdom-2.0.6/jdom-2.0.6-javadoc.jar; ./lib/jdom-2.0.6/jdom-2.0.6-junit.jar; ./lib/jdom-2.0.6/jdom-2.0.6-sources.jar; ./lib/jdom-2.0.6/jdom-2.0.6.jar; ./lib/jdom-2.0.6/lib/jaxen-1.1.6.jar; ./lib/jdom-2.0.6/lib/xalan/serializer-2.7.2.jar; ./lib/jdom-2.0.6/lib/xalan/xalan-2.7.2.jar; ./lib/jdom-2.0.6/lib/xercesImpl.jar; ./lib/jdom-2.0.6/lib/xml-apis.jar; lib/jinput.jar; ./lib/jnlp.jar; ./lib/jogg-0.0.7.jar; ./lib/jorbis-0.0.15.jar; ./lib/lwjgl.jar; ./lib/lwjgl_util.jar; ./lib/lwjgl_util_applet.jar; ./lib/natives-linux.jar; ./lib/natives-mac.jar; ./lib/natives-windows.jar; ./lib/natives/Pack200Task.jar; ./lib/slick-examples.jar; ./lib/slick.jar; ./lib/tinylinepp.jar" />
+      -->
+        <attribute name="built-by" value="${user.name}" />      
+      <attribute name="Main-Class" value="pacmiage2.JeuPacMiage" />   
+   </manifest>
 
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
+</target>
 
-    An example of overriding the target for project execution could look like this:
+<path id="dep.runtime">
+    <fileset dir="./lib">
+        <include name="**/*.jar" />
+    </fileset>
+</path>
+<property name="dep_cp" value="${toString:dep.runtime}" />
 
-        <target name="run" depends="PacMiage2-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
+<target name="default">
+    <manifestclasspath property="manifest_cp" jarfile="myjar.jar">
+        <classpath refid="dep.runtime" />
+    </manifestclasspath>
+    <echo message="Build Classpath: ${dep_cp}" />
+    <echo message="Manifest Classpath: ${manifest_cp}" />
+</target>
 
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
 
-    -->
+    <target name="package-for-store" depends="jar">
+
+        <!-- Change the value of this property to be the name of your JAR,
+             minus the .jar extension. It should not have spaces.
+             <property name="store.jar.name" value="MyJarName"/>
+        -->
+        <property name="store.jar.name" value="SCHEDULAR"/>
+
+
+        <!-- don't edit below this line -->
+
+        <property name="store.dir" value="store"/>
+        <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+
+        <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+
+        <delete dir="${store.dir}"/>
+        <mkdir dir="${store.dir}"/>
+
+        <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+            <zipgroupfileset dir="dist" includes="*.jar"/>
+            <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+
+            <manifest>
+                <attribute name="Main-Class" value="${main.class}"/>
+            </manifest>
+        </jar>
+
+        <zip destfile="${store.jar}">
+            <zipfileset src="${store.dir}/temp_final.jar"
+            excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+        </zip>
+
+        <delete file="${store.dir}/temp_final.jar"/>
+
+    </target>
+    
+    <target name="-post-jar">
+    <property name="store.jar.name" value="AllInOneJar"/>
+    <property name="store.dir" value="dist"/>
+    <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+    <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+    <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+        <zipgroupfileset dir="dist" includes="*.jar"/>
+        <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+        <manifest>
+            <attribute name="Main-Class" value="${main.class}"/>
+        </manifest>
+    </jar>
+    <zip destfile="${store.jar}">
+        <zipfileset src="${store.dir}/temp_final.jar"
+        excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+    </zip>
+    <delete file="${store.dir}/temp_final.jar"/>
+</target>
+    
+
 </project>
