--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,7 @@ file.reference.lwjgl_util_applet.jar=lib/lwjgl_util_applet.jar
 file.reference.natives-linux.jar=lib/natives-linux.jar
 file.reference.natives-mac.jar=lib/natives-mac.jar
 file.reference.natives-windows.jar=lib/natives-windows.jar
-file.reference.Pack200Task.jar=lib/natives/Pack200Task.jar
+file.reference.Pack200Task.jar=lib/Pack200Task.jar
 file.reference.slick-examples.jar=lib/slick-examples.jar
 file.reference.slick.jar=lib/slick.jar
 file.reference.StyleButton.jar=lib/StyleButton.jar
@@ -52,30 +52,30 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.ibxm.jar}:\
     ${file.reference.jinput.jar}:\
     ${file.reference.jnlp.jar}:\
     ${file.reference.jogg-0.0.7.jar}:\
-    ${file.reference.jorbis-0.0.15.jar}:\
+    ${file.reference.ibxm.jar}:\
     ${file.reference.lwjgl.jar}:\
     ${file.reference.lwjgl_util.jar}:\
     ${file.reference.lwjgl_util_applet.jar}:\
     ${file.reference.natives-linux.jar}:\
     ${file.reference.natives-mac.jar}:\
     ${file.reference.natives-windows.jar}:\
-    ${file.reference.slick-examples.jar}:\
+    ${file.reference.StyleButton.jar}:\
     ${file.reference.slick.jar}:\
-    ${file.reference.tinylinepp.jar}:\
-    ${file.reference.Pack200Task.jar}:\
+    ${file.reference.slick-examples.jar}:\
     ${file.reference.jdom-2.0.6.jar}:\
-    ${file.reference.StyleButton.jar}
+    ${file.reference.jorbis-0.0.15.jar}:\
+    ${file.reference.tinylinepp.jar}:\
+    ${file.reference.Pack200Task.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -119,7 +119,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=lib/natives 
+run.jvmargs=-Djava.library.path=lib/natives/
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
