--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -101,7 +101,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=pacmiage2.JeuPacMiage
+main.class=pacmiage2.controleur.JeuPacMiage
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
