Modification interface graphique

--- a/src/ressources/properties/pacfr.properties
+++ b/src/ressources/properties/pacfr.properties
@@ -1,8 +1,9 @@
 retour = retour au menu
 nouvelle = Commencer une nouvelle partie
 score = Afficher les scores
+quitter = Quitter
 store = Aller au store
 oui = Oui
 non = Non
 confirmation = Voulez vous acheter cet objet ?
-niveaux = Sélectionner un niveau
+niveaux = S\u00e9lectionner un niveau
