--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,45 +30,17 @@ dist.jar=${dist.dir}/PacMiage2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ibxm.jar=lib/ibxm.jar
 file.reference.jdom-2.0.6.jar=lib/jdom-2.0.6/jdom-2.0.6.jar
-file.reference.jinput.jar=lib/jinput.jar
-file.reference.jnlp.jar=lib/jnlp.jar
-file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
-file.reference.jorbis-0.0.15.jar=lib/jorbis-0.0.15.jar
 file.reference.lwjgl.jar=lib/lwjgl.jar
-file.reference.lwjgl_util.jar=lib/lwjgl_util.jar
-file.reference.lwjgl_util_applet.jar=lib/lwjgl_util_applet.jar
-file.reference.natives-linux.jar=lib/natives-linux.jar
-file.reference.natives-mac.jar=lib/natives-mac.jar
-file.reference.natives-windows.jar=lib/natives-windows.jar
-file.reference.Pack200Task.jar=lib/Pack200Task.jar
-file.reference.slick-examples.jar=lib/slick-examples.jar
 file.reference.slick.jar=lib/slick.jar
-file.reference.StyleButton.jar=lib/StyleButton.jar
-file.reference.tinylinepp.jar=lib/tinylinepp.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jinput.jar}:\
-    ${file.reference.jnlp.jar}:\
-    ${file.reference.jogg-0.0.7.jar}:\
-    ${file.reference.ibxm.jar}:\
-    ${file.reference.lwjgl.jar}:\
-    ${file.reference.lwjgl_util.jar}:\
-    ${file.reference.lwjgl_util_applet.jar}:\
-    ${file.reference.natives-linux.jar}:\
-    ${file.reference.natives-mac.jar}:\
-    ${file.reference.natives-windows.jar}:\
-    ${file.reference.StyleButton.jar}:\
     ${file.reference.slick.jar}:\
-    ${file.reference.slick-examples.jar}:\
     ${file.reference.jdom-2.0.6.jar}:\
-    ${file.reference.jorbis-0.0.15.jar}:\
-    ${file.reference.tinylinepp.jar}:\
-    ${file.reference.Pack200Task.jar}
+    ${file.reference.lwjgl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -101,7 +73,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=pacmiage2.controleur.JeuPacMiage
+main.class=pacmiage2.controleur.MainPacMiage
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
