Librairies Jogg et Jorbis qui été retirées. Objet Clock détouré.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jdom-2.0.6.jar=lib/jdom-2.0.6/jdom-2.0.6.jar
+file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
+file.reference.jorbis-0.0.15.jar=lib/jorbis-0.0.15.jar
 file.reference.lwjgl.jar=lib/lwjgl.jar
 file.reference.slick.jar=lib/slick.jar
 includes=**
@@ -40,7 +42,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.slick.jar}:\
     ${file.reference.jdom-2.0.6.jar}:\
-    ${file.reference.lwjgl.jar}
+    ${file.reference.lwjgl.jar}:\
+    ${file.reference.jorbis-0.0.15.jar}:\
+    ${file.reference.jogg-0.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
