Musique par niveau Traduction menu pause

--- a/src/ressources/properties/pacen.properties
+++ b/src/ressources/properties/pacen.properties
@@ -7,3 +7,7 @@ oui = Yes
 non = No
 confirmation = Do you want to by this ?
 niveaux = Select a level
+choisir = Choose an item
+continuer = Resume the game
+son = Sound on/off
+quitter = Exit
