--- a/src/ressources/properties/pacfr.properties
+++ b/src/ressources/properties/pacfr.properties
@@ -7,3 +7,7 @@ oui = Oui
 non = Non
 confirmation = Voulez vous acheter cet objet ?
 niveaux = S\u00e9lectionner un niveau
+choisir = Choisir un objet
+continuer = Continuer la partie
+son = Son on/off
+quitter = Quitter
